# postgres-wasm-fdw-spreadsheets

./: Cargo.toml  README.md
src/: lib.rs
wit/: world.wit
