[package]
name = "postgres_wasm_fdw_spreadsheets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "1", features = ["rt"] }
hmac = "0.12"  
sha2 = "0.10"
base64 = "0.21"
# For PEM decoding
pem = { version = "3", optional = true }
simple_asn1 = { version = "0.6", optional = true }
subtle = "2.6"

[features]
default = ["use_pem"]
use_pem = ["pem", "simple_asn1"]



[package.metadata.component]
package = "tometome2537:postgres-wasm-fdw-spreadsheets"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
